--- a/index.html
+++ b/index.html
@@ -33,8 +33,15 @@
     <div id="pause"><i class="fa fa-pause"> PAUSE</i></div>
     <div id="reset"><i class="fa fa-stop"> RESET</i></div>
   </div>
+  <p id="sozai">[使用音源について] 効果音: 魔王魂<a href="http://maoudamashii.jokersounds.com/" title="フリー音楽素材/魔王魂" target="_blank">フリー音楽素材/魔王魂</a></p>
 </div>
+<audio id="sound" preload="auto">
+<source src="sound/alarm.mp3" type="audio/mp3">
+</audio>
 <script src="JS/jquery-2.1.1.min.js"></script>
+<script>
+window.$ = window.jQuery = require('./JS/jquery-2.1.1.min.js');
+</script>
 <script src="JS/Timer.js"></script>
 </body>
 </html>
